# diix_UIautomator

./: .gitignore  README.md  chaves_pix.txt  example_flow.json  example_pix_flow.json  pyproject.toml  setup.py
.github/workflows/: python-ci.yml
tests/: test_action_runner.py  test_adb_client.py  test_cli.py  test_dump_manager.py  test_element_finder.py  test_flow_loader.py  test_wait_for_find_all.py
ui_automator/: __init__.py  action_runner.py  adb_client.py  cli.py  dump_manager.py  element_finder.py  flow_loader.py
